--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ __pycache__/
 
 # SQLite databases
 *.db
-app/database/
+# app/database/
+app/static/uploads/*.jpg
 
 # Distribution / packaging
 .Python
